@@ -167,6 +167,7 @@ Version 1.5
  - If the TriggerRefreshValue XML is invalid, we could get into a infinite loop when trying to read the params (Justin)
  - Add Fibaro FGKF601 Keyfob (Nechry)
  - Add BeNext TagReader500 from hvbommel (Nechry)
+ - Restore Z-Wave.Me ZME_05461 (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
